# cookiecutter-pypackage

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/tests/unit/: test_hello.py
