{% set is_open_source = cookiecutter.open_source_license != 'Not open source' -%}

[build-system]
requires = ["setuptools",
            "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_short_description }}"
dynamic = ["version"]
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
keywords = []
{% if is_open_source %}
license = {text = "{{ cookiecutter.open_source_license }}"}
{%- endif %}
authors = [
    {name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}"},
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_organization }}/{{ cookiecutter.project_slug }}"
repository = "https://github.com/{{ cookiecutter.github_organization }}/{{ cookiecutter.project_slug }}"
"Bug Tracker" = "https://github.com/{{ cookiecutter.github_organization }}/{{ cookiecutter.project_slug }}/issues"

[tool.setuptools]
include-package-data = true
dynamic = {version = {attr = "{{ cookiecutter.project_slug }}.__version__"}}

[tool.setuptools.packages.find]
where= ["src"]
exclude=['tests']

[tool.setuptools.package-data]
"*" = ["*.pyi"]

[project.optional-dependencies]
dev = [
    'mypy',
    'ruff'
]
tests = [
  'coverage',
  'pytest',
  'pytest-cov',
  'pytest-benchmark[histogram]',
]
